# ChatDataDemo

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose-build.yml  docker-compose-deploy.yml  pyproject.toml  release.sh  update.sh
app/: __init__.py  main.py
app/api/: ingest.py  query.py
app/handler/: ingest_data.py  query_data.py
app/model/: chat_model.py  ingest_model.py
app/utils/: misc.py  recv_file.py  snow_flake.py
