[tool.poetry]
name = "chatdata"
version = "0.0.1"
description = "A simple chat with data application backend api service."
authors = ["antx-code <wkaifeng2007@163.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
openai = "^0.27.2"
langchain = "^0.0.125"
qdrant-client = "^1.1.1"
ruff = "^0.0.261"
loguru = "^0.6.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
uvloop = "^0.17.0"
pypdf2 = "^3.0.1"
llama-index = "^0.5.12"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".venv",
    "__pycache__",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".ruff_cache",
    "examples",
    "notebooks",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
